test-suite/tests/roundtrip/invalid/semantic/typecheck/int_in_bool_list/01/tree-sitter.generated-error.txt
tests/roundtrip/invalid/semantic/typecheck/int_in_bool_list/01/input.essence:3:15:
  |
3 | such that or([x, y])
  |               ^
Type error: x
	Expected: bool
	Got: int